--- a/assets/index.html
+++ b/assets/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <!-- 新 Bootstrap 核心 CSS 文件 -->
+    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
 </head>
 <body>
 <div id="example"></div>
 </body>
 <script src="bundle.js"></script>
+<script src="http://localhost:8000/webpack-dev-server.js"></script>
 </html>
