--- a/assets/index.html
+++ b/assets/index.html
@@ -10,4 +10,12 @@
 <div id="example"></div>
 </body>
 <script src="bundle.js"></script>
+<script src="//libs.useso.com/js/jquery/1.10.1/jquery.min.js"></script>
+<script src="plugin/icheck.min.js"></script>
+<script>
+    $('input').iCheck({
+        labelHover: false,
+        cursor: true
+    });
+</script>
 </html>
